--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,8 @@
     "src/**/*.ts",
     "src/**/*.d.ts",
     "src/**/*.tsx",
-    "src/**/*.vue"
+    "src/**/*.vue",
+    "src/views/es5-12/06_Export导出.js"
   ],
   "references": [
     {
